--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-14 Mon 04:50 -->
+<!-- 2022-02-14 Mon 05:27 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Settings</title>
@@ -52,15 +52,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org7fd69d3">CNAME</a></li>
-<li><a href="#org8154f52">index.html</a></li>
+<li><a href="#orgb6d3c46">CNAME</a></li>
+<li><a href="#org68115fc">index.html</a></li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org7fd69d3" class="outline-2">
-<h2 id="org7fd69d3">CNAME</h2>
-<div class="outline-text-2" id="text-org7fd69d3">
+<div id="outline-container-orgb6d3c46" class="outline-2">
+<h2 id="orgb6d3c46">CNAME</h2>
+<div class="outline-text-2" id="text-orgb6d3c46">
 <div class="org-src-container">
 <pre><code class="language-plaintext match-braces rainbow-braces">syvl.org
 </code></pre>
@@ -68,11 +68,11 @@
 </div>
 </div>
 
-<div id="outline-container-org8154f52" class="outline-2">
-<h2 id="org8154f52">index.html</h2>
-<div class="outline-text-2" id="text-org8154f52">
+<div id="outline-container-org68115fc" class="outline-2">
+<h2 id="org68115fc">index.html</h2>
+<div class="outline-text-2" id="text-org68115fc">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgfab15a4">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgbccc333">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -99,7 +99,7 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-14 Mon 04:50</p>
+<p class="date">Created: 2022-02-14 Mon 05:27</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
