--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-14 Mon 19:48 -->
+<!-- 2022-02-14 Mon 20:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -224,16 +224,10 @@ table,
 margin-bottom: var(--padding);
 }
 
-table {
-text-align: center;
-}
-
-
 /* Even Table Row */
 
 tr:nth-child(even) {
 background-color: #2f1e2e;
-color: var(--exo-ui-red);
 }
 
 .org-org-meta-line,
@@ -347,7 +341,7 @@ text-decoration: var(--joker-purple) wavy line-through;
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgad70334">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgc7b1c4f">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -374,7 +368,7 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-14 Mon 19:48</p>
+<p class="date">Created: 2022-02-14 Mon 20:41</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
