--- a/RESUME.html
+++ b/RESUME.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-14 Mon 19:48 -->
+<!-- 2022-02-14 Mon 20:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Résumé</title>
@@ -224,16 +224,10 @@ table,
 margin-bottom: var(--padding);
 }
 
-table {
-text-align: center;
-}
-
-
 /* Even Table Row */
 
 tr:nth-child(even) {
 background-color: #2f1e2e;
-color: var(--exo-ui-red);
 }
 
 .org-org-meta-line,
@@ -328,42 +322,57 @@ text-decoration: var(--joker-purple) wavy line-through;
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org2553df9">General Information</a></li>
-<li><a href="#org501b642">Qualifications</a></li>
-<li><a href="#org16a0970">Projects</a></li>
-<li><a href="#orgfdddc3b">References</a>
+<li><a href="#orgadb2165">General Information</a></li>
+<li><a href="#orgcb89617">Qualifications</a></li>
+<li><a href="#orgfd98f6f">Projects</a></li>
+<li><a href="#orga7b4402">References</a>
 <ul>
-<li><a href="#orgad0d2c4">Neena Gupta</a></li>
+<li><a href="#orge2e7677">Neena Gupta</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org2553df9" class="outline-2">
-<h2 id="org2553df9">General Information</h2>
-<div class="outline-text-2" id="text-org2553df9">
-<p>
-<code>Name:</code>           Jeet Ray
-</p>
+<div id="outline-container-orgadb2165" class="outline-2">
+<h2 id="orgadb2165">General Information</h2>
+<div class="outline-text-2" id="text-orgadb2165">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
-<p>
-<code>E-mail Address:</code> jeet.ray@syvl.org
-</p>
 
-<p>
-<code>Home Address:</code>   22 Longueuil Place, Whitby, ON, L1R 3G9
-</p>
+<colgroup>
+<col  class="org-left" />
 
-<p>
-<code>Phone Number:</code>   +1 (647) 785-0956
-</p>
+<col  class="org-left" />
+</colgroup>
+<tbody>
+<tr>
+<td class="org-left"><code>Name:</code></td>
+<td class="org-left">Jeet Ray</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>E-mail Address:</code></td>
+<td class="org-left">jeet.ray@syvl.org</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>Home Address:</code></td>
+<td class="org-left">22 Longueuil Place, Whitby, ON, L1R 3G9</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>Phone Number:</code></td>
+<td class="org-left">+1 (647) 785-0956</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 
-<div id="outline-container-org501b642" class="outline-2">
-<h2 id="org501b642">Qualifications</h2>
-<div class="outline-text-2" id="text-org501b642">
+<div id="outline-container-orgcb89617" class="outline-2">
+<h2 id="orgcb89617">Qualifications</h2>
+<div class="outline-text-2" id="text-orgcb89617">
 <ul class="org-ul">
 <li>Excellent Interpersonal Skills</li>
 <li>Well Organized</li>
@@ -421,9 +430,9 @@ text-decoration: var(--joker-purple) wavy line-through;
 </div>
 </div>
 
-<div id="outline-container-org16a0970" class="outline-2">
-<h2 id="org16a0970">Projects</h2>
-<div class="outline-text-2" id="text-org16a0970">
+<div id="outline-container-orgfd98f6f" class="outline-2">
+<h2 id="orgfd98f6f">Projects</h2>
+<div class="outline-text-2" id="text-orgfd98f6f">
 <ul class="org-ul">
 <li>Python
 <ul class="org-ul">
@@ -433,30 +442,45 @@ text-decoration: var(--joker-purple) wavy line-through;
 </div>
 </div>
 
-<div id="outline-container-orgfdddc3b" class="outline-2">
-<h2 id="orgfdddc3b">References</h2>
-<div class="outline-text-2" id="text-orgfdddc3b">
+<div id="outline-container-orga7b4402" class="outline-2">
+<h2 id="orga7b4402">References</h2>
+<div class="outline-text-2" id="text-orga7b4402">
 </div>
-<div id="outline-container-orgad0d2c4" class="outline-3">
-<h3 id="orgad0d2c4">Neena Gupta</h3>
-<div class="outline-text-3" id="text-orgad0d2c4">
-<p>
-<code>Occupation:</code> P. A. , Partner, Gowling WLG's Waterloo Region and Toronto offices
-</p>
+<div id="outline-container-orge2e7677" class="outline-3">
+<h3 id="orge2e7677">Neena Gupta</h3>
+<div class="outline-text-3" id="text-orge2e7677">
+<table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
-<p>
-<code>E-mail Address:</code> neena.gupta@gowlingwlg.com
-</p>
 
-<p>
-<code>Phone Number:</code> +1 (519) 577-5910</p>
+<colgroup>
+<col  class="org-left" />
+
+<col  class="org-left" />
+</colgroup>
+<tbody>
+<tr>
+<td class="org-left"><code>Occupation:</code></td>
+<td class="org-left">P. A. , Partner, Gowling WLG's Waterloo Region and Toronto offices</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>E-mail Address:</code></td>
+<td class="org-left">neena.gupta@gowlingwlg.com</td>
+</tr>
+
+<tr>
+<td class="org-left"><code>Phone Number:</code></td>
+<td class="org-left">+1 (519) 577-5910</td>
+</tr>
+</tbody>
+</table>
 </div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-14 Mon 19:48</p>
+<p class="date">Created: 2022-02-14 Mon 20:41</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
