--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-14 Mon 20:41 -->
+<!-- 2022-02-14 Mon 20:51 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -34,6 +34,7 @@
 --font-size-small: 0.5rem;
 --font-size-xsmall: 0.25rem;
 --margins: 5rem;
+--smaller-margins: 2.5rem;
 --padding: 1rem;
 --header-padding: 0.25rem;
 --background-color: #222222;
@@ -67,9 +68,25 @@ body {
 background-color: var(--background-color);
 font-family: "Courier New", monospace;
 font-weight: 100;
+color: var(--joker-purple);
+}
+
+@media only screen and (min-width: 750px) /* Large screens */
+{
+html,
+body {
 margin-left: var(--margins);
 margin-right: var(--margins);
-color: var(--joker-purple);
+}
+}
+
+@media only screen and (max-width: 750px) /* Small screens */
+{
+html,
+body {
+margin-left: var(--smaller-margins);
+margin-right: var(--smaller-margins);
+}
 }
 
 ::selection {
@@ -341,7 +358,7 @@ text-decoration: var(--joker-purple) wavy line-through;
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgc7b1c4f">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org353fec8">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -368,7 +385,7 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-14 Mon 20:41</p>
+<p class="date">Created: 2022-02-14 Mon 20:51</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
