--- a/RESUME.html
+++ b/RESUME.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-14 Mon 20:51 -->
+<!-- 2022-02-15 Tue 00:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Résumé</title>
@@ -339,21 +339,21 @@ text-decoration: var(--joker-purple) wavy line-through;
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org6622143">General Information</a></li>
-<li><a href="#org7d9a118">Qualifications</a></li>
-<li><a href="#orgef9aba3">Projects</a></li>
-<li><a href="#org9b2261e">References</a>
+<li><a href="#org7472317">General Information</a></li>
+<li><a href="#org1cce2eb">Qualifications</a></li>
+<li><a href="#org8f37f8b">Projects</a></li>
+<li><a href="#orgd529eb4">References</a>
 <ul>
-<li><a href="#orgeaa215a">Neena Gupta</a></li>
+<li><a href="#orgda68b25">Neena Gupta</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org6622143" class="outline-2">
-<h2 id="org6622143">General Information</h2>
-<div class="outline-text-2" id="text-org6622143">
+<div id="outline-container-org7472317" class="outline-2">
+<h2 id="org7472317">General Information</h2>
+<div class="outline-text-2" id="text-org7472317">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -387,14 +387,14 @@ text-decoration: var(--joker-purple) wavy line-through;
 </div>
 </div>
 
-<div id="outline-container-org7d9a118" class="outline-2">
-<h2 id="org7d9a118">Qualifications</h2>
-<div class="outline-text-2" id="text-org7d9a118">
+<div id="outline-container-org1cce2eb" class="outline-2">
+<h2 id="org1cce2eb">Qualifications</h2>
+<div class="outline-text-2" id="text-org1cce2eb">
 <ul class="org-ul">
 <li>Excellent Interpersonal Skills</li>
 <li>Well Organized</li>
 <li>Punctual</li>
-<li>96.5 hours of volunteer work (detailed below)</li>
+<li>96.5 hours of volunteer work (unrelated to computer science)</li>
 <li>Specialize in automation
 <ul class="org-ul">
 <li>Python</li>
@@ -447,9 +447,9 @@ text-decoration: var(--joker-purple) wavy line-through;
 </div>
 </div>
 
-<div id="outline-container-orgef9aba3" class="outline-2">
-<h2 id="orgef9aba3">Projects</h2>
-<div class="outline-text-2" id="text-orgef9aba3">
+<div id="outline-container-org8f37f8b" class="outline-2">
+<h2 id="org8f37f8b">Projects</h2>
+<div class="outline-text-2" id="text-org8f37f8b">
 <ul class="org-ul">
 <li>Python
 <ul class="org-ul">
@@ -459,13 +459,13 @@ text-decoration: var(--joker-purple) wavy line-through;
 </div>
 </div>
 
-<div id="outline-container-org9b2261e" class="outline-2">
-<h2 id="org9b2261e">References</h2>
-<div class="outline-text-2" id="text-org9b2261e">
+<div id="outline-container-orgd529eb4" class="outline-2">
+<h2 id="orgd529eb4">References</h2>
+<div class="outline-text-2" id="text-orgd529eb4">
 </div>
-<div id="outline-container-orgeaa215a" class="outline-3">
-<h3 id="orgeaa215a">Neena Gupta</h3>
-<div class="outline-text-3" id="text-orgeaa215a">
+<div id="outline-container-orgda68b25" class="outline-3">
+<h3 id="orgda68b25">Neena Gupta</h3>
+<div class="outline-text-3" id="text-orgda68b25">
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
 
 
@@ -497,7 +497,7 @@ text-decoration: var(--joker-purple) wavy line-through;
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-14 Mon 20:51</p>
+<p class="date">Created: 2022-02-15 Tue 00:53</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
