--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-25 Fri 01:32 -->
+<!-- 2022-02-27 Sun 19:28 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,6 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
+<li><a href="#org7579bdf">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -73,7 +74,7 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org44904ea">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgfc92f8a">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -82,7 +83,10 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">&lt;&lt;\EOF # This index file is also a shell script! Go to index.syvl.org to see what it can do!
+<pre><code class="language-sh match-braces rainbow-braces">#! nix-shell -i sh -p yadm
+#! nix-shell -I nixpkgs=https://github.com/shadowrylander/nixpkgs/archive/j.tar.gz
+# This index file is also a shell script! Go to index.syvl.org to see what it can do!
+&lt;&lt;\EOF
 </code></pre>
 </div>
 
@@ -101,6 +105,35 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 GIT_SSL_NO_VERIFY=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:shadowrylander/home.git
+make -f "$HOME/.emacs.d/makefile" soft-init
+</code></pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org7579bdf" class="outline-2">
+<h2 id="org7579bdf">makefile</h2>
+<div class="outline-text-2" id="text-org7579bdf">
+<div class="org-src-container">
+<pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
+.DEFAULT_GOAL := et
+
+# Adapted From: https://www.systutorials.com/how-to-get-the-full-path-and-directory-of-a-makefile-itself/
+mkfilePath := $(abspath $(lastword $(MAKEFILE_LIST)))
+mkfileDir := $(dir $(mkfilePath))
+
+et:
+|chmod +x $(mkfileDir)/settings/*.sh
+|$(mkfileDir)/settings/org-export.sh $(mkfileDir)/README.org
+|$(mkfileDir)/settings/org-tangle.sh $(mkfileDir)/README.org
+
+commit:
+|git -C $(mkfileDir) commit --allow-empty-message -am ""
+
+push:
+|git -C $(mkfileDir) push
+
+super-push: commit push
 </code></pre>
 </div>
 </div>
@@ -108,7 +141,7 @@ yadm remote set-url --push origin git@github.com:shadowrylander/home.git
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-25 Fri 01:32</p>
+<p class="date">Created: 2022-02-27 Sun 19:28</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
