--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-28 Mon 04:03 -->
+<!-- 2022-02-28 Mon 23:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org2ffd803">makefile</a></li>
+<li><a href="#orgc0ddd30">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -74,7 +74,7 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org2c9e6c3">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org9d45b46">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -106,20 +106,16 @@ GIT_SSL_NO_VERIFY=1 yadm submodule update --init --depth 1 --recursive --remote 
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:shadowrylander/home.git
 make -f "$HOME/.emacs.d/makefile" soft-init
-
-sudo yadm clone --no-bootstrap https://github.com/shadowrylander/home.git
-GIT_SSL_NO_VERIFY=1 sudo yadm submodule update --init --depth 1 --recursive --remote --force
-sudo yadm config include.path "$HOME/.gitconfig"
-sudo yadm remote set-url --push origin git@github.com:shadowrylander/home.git
-sudo make -f "$HOME/.emacs.d/makefile" soft-init
+chmod +x "$HOME/.config/yadm/bootstrap"
+"$HOME/.config/yadm/bootstrap"
 </code></pre>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org2ffd803" class="outline-2">
-<h2 id="org2ffd803">makefile</h2>
-<div class="outline-text-2" id="text-org2ffd803">
+<div id="outline-container-orgc0ddd30" class="outline-2">
+<h2 id="orgc0ddd30">makefile</h2>
+<div class="outline-text-2" id="text-orgc0ddd30">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := et
@@ -139,7 +135,9 @@ commit:
 push:
 |git -C $(mkfileDir) push
 
-super-push: commit push
+cpush: commit push
+
+super-push: et cpush
 </code></pre>
 </div>
 </div>
@@ -147,7 +145,7 @@ super-push: commit push
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-28 Mon 04:03</p>
+<p class="date">Created: 2022-02-28 Mon 23:55</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
