--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-02-28 Mon 23:55 -->
+<!-- 2022-03-11 Fri 22:31 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgc0ddd30">makefile</a></li>
+<li><a href="#org0833ed3">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -74,7 +74,7 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org9d45b46">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org4d35d3b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -83,9 +83,7 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">#! nix-shell -i sh -p yadm
-#! nix-shell -I nixpkgs=https://github.com/shadowrylander/nixpkgs/archive/j.tar.gz
-# This index file is also a shell script! Go to index.syvl.org to see what it can do!
+<pre><code class="language-sh match-braces rainbow-braces"># This index file is also a shell script! Go to index.syvl.org to see what it can do!
 &lt;&lt;\EOF
 </code></pre>
 </div>
@@ -101,21 +99,48 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">yadm clone --no-bootstrap https://github.com/shadowrylander/home.git
+<pre><code class="language-sh match-braces rainbow-braces">nix-shell - &lt;&lt;\EOF
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-nix match-braces rainbow-braces">with import (fetchGit {
+    url = "https://github.com/shadowrylander/nixpkgs";
+    ref = "j";
+    rev = "d5b8a4f80bf731183ee32a0357c1313cfd8c29e5";
+}) {}; {
+    buildInputs = [ yadm ];
+    shellHook = ''
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-sh match-braces rainbow-braces">yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git
 GIT_SSL_NO_VERIFY=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
-yadm remote set-url --push origin git@github.com:shadowrylander/home.git
+yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
 </code></pre>
 </div>
+
+<div class="org-src-container">
+<pre><code class="language-nix match-braces rainbow-braces">    '';
+}
+</code></pre>
+</div>
+
+<div class="org-src-container">
+<pre><code class="language-sh match-braces rainbow-braces">EOF
+</code></pre>
+</div>
 </div>
 </div>
 
-<div id="outline-container-orgc0ddd30" class="outline-2">
-<h2 id="orgc0ddd30">makefile</h2>
-<div class="outline-text-2" id="text-orgc0ddd30">
+<div id="outline-container-org0833ed3" class="outline-2">
+<h2 id="org0833ed3">makefile</h2>
+<div class="outline-text-2" id="text-org0833ed3">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := et
@@ -145,7 +170,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-02-28 Mon 23:55</p>
+<p class="date">Created: 2022-03-11 Fri 22:31</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
