--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-11 Fri 22:38 -->
+<!-- 2022-03-11 Fri 22:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#org67196c8">makefile</a></li>
+<li><a href="#org023ae80">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,7 +77,7 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org1c49c41">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgc842f5e">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -107,10 +107,9 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-nix match-braces rainbow-braces">with import (fetchGit {
-    url = "https://github.com/shadowrylander/nixpkgs";
-    ref = "j";
-    rev = "d5b8a4f80bf731183ee32a0357c1313cfd8c29e5";
+<pre><code class="language-nix match-braces rainbow-braces">with import (fetchTarball {
+    url = "https://github.com/shadowrylander/nixpkgs/archive/d5b8a4f80bf731183ee32a0357c1313cfd8c29e5.tar.gz";
+    sha256 = "1fd665gz0h9sldsy683f1kvlgngv2sx79myb3v7r2hmsf0lbl8cg";
 }) {}; mkShell {
     buildInputs = [ yadm ];
     shellHook = ''
@@ -141,9 +140,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-org67196c8" class="outline-2">
-<h2 id="org67196c8">makefile</h2>
-<div class="outline-text-2" id="text-org67196c8">
+<div id="outline-container-org023ae80" class="outline-2">
+<h2 id="org023ae80">makefile</h2>
+<div class="outline-text-2" id="text-org023ae80">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := et
@@ -173,7 +172,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-11 Fri 22:38</p>
+<p class="date">Created: 2022-03-11 Fri 22:55</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
@@ -181,10 +180,9 @@ super-push: et cpush
 <!--
 EOF
 nix-shell - <<\EOF
-with import (fetchGit {
-    url = "https://github.com/shadowrylander/nixpkgs";
-    ref = "j";
-    rev = "d5b8a4f80bf731183ee32a0357c1313cfd8c29e5";
+with import (fetchTarball {
+    url = "https://github.com/shadowrylander/nixpkgs/archive/d5b8a4f80bf731183ee32a0357c1313cfd8c29e5.tar.gz";
+    sha256 = "1fd665gz0h9sldsy683f1kvlgngv2sx79myb3v7r2hmsf0lbl8cg";
 }) {}; mkShell {
     buildInputs = [ yadm ];
     shellHook = ''
