--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-11 Fri 23:28 -->
+<!-- 2022-03-12 Sat 15:21 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgd5f9fb3">makefile</a></li>
+<li><a href="#orgc90a0f6">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,7 +77,7 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgdc1a445">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgaf549a0">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -102,22 +102,13 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">nix-shell - &lt;&lt;\EOF
-</code></pre>
-</div>
-
-<div class="org-src-container">
-<pre><code class="language-nix match-braces rainbow-braces">with import (fetchTarball {
-    url = "https://github.com/shadowrylander/nixpkgs/archive/d5b8a4f80bf731183ee32a0357c1313cfd8c29e5.tar.gz";
-    sha256 = "1fd665gz0h9sldsy683f1kvlgngv2sx79myb3v7r2hmsf0lbl8cg";
-}) {}; mkShell {
-    buildInputs = [ yadm git ];
-    shellHook = ''
-</code></pre>
-</div>
-
-<div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git 2&gt; /dev/null
+<pre><code class="language-sh match-braces rainbow-braces">hash yadm 2&gt; /dev/null
+if [ $? -ne 0 ]; then
+    hash nix 2&gt; /den/null
+    if [ $? -ne 0 ]; then sh &lt;(curl -fsSL https://nixos.org/nix/install) --daemon; fi
+    nix-env -i yadm
+fi
+yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git 2&gt; /dev/null
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
 yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.git
@@ -126,26 +117,15 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
 </code></pre>
 </div>
-
-<div class="org-src-container">
-<pre><code class="language-nix match-braces rainbow-braces">    '';
-}
-</code></pre>
-</div>
-
-<div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">EOF
-</code></pre>
-</div>
 </div>
 </div>
 
-<div id="outline-container-orgd5f9fb3" class="outline-2">
-<h2 id="orgd5f9fb3">makefile</h2>
-<div class="outline-text-2" id="text-orgd5f9fb3">
+<div id="outline-container-orgc90a0f6" class="outline-2">
+<h2 id="orgc90a0f6">makefile</h2>
+<div class="outline-text-2" id="text-orgc90a0f6">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
-.DEFAULT_GOAL := et
+.DEFAULT_GOAL := super-push
 
 # Adapted From: https://www.systutorials.com/how-to-get-the-full-path-and-directory-of-a-makefile-itself/
 mkfilePath := $(abspath $(lastword $(MAKEFILE_LIST)))
@@ -172,20 +152,19 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-11 Fri 23:28</p>
+<p class="date">Created: 2022-03-12 Sat 15:21</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
 </html>
 <!--
 EOF
-nix-shell - <<\EOF
-with import (fetchTarball {
-    url = "https://github.com/shadowrylander/nixpkgs/archive/d5b8a4f80bf731183ee32a0357c1313cfd8c29e5.tar.gz";
-    sha256 = "1fd665gz0h9sldsy683f1kvlgngv2sx79myb3v7r2hmsf0lbl8cg";
-}) {}; mkShell {
-    buildInputs = [ yadm git ];
-    shellHook = ''
+hash yadm 2> /dev/null
+if [ $? -ne 0 ]; then
+    hash nix 2> /den/null
+    if [ $? -ne 0 ]; then sh <(curl -fsSL https://nixos.org/nix/install) --daemon; fi
+    nix-env -i yadm
+fi
 yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git 2> /dev/null
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
@@ -193,6 +172,3 @@ yadm remote set-url --push origin git@github.com:shadowrylander/shadowrylander.g
 make -f "$HOME/.emacs.d/makefile" soft-init
 chmod +x "$HOME/.config/yadm/bootstrap"
 "$HOME/.config/yadm/bootstrap"
-    '';
-}
-EOF
