--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-12 Sat 15:21 -->
+<!-- 2022-03-12 Sat 15:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -58,7 +58,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgc90a0f6">makefile</a></li>
+<li><a href="#orge4d77c2">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,7 +77,7 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgaf549a0">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgad57b47">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -102,9 +102,10 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">hash yadm 2&gt; /dev/null
+<pre><code class="language-sh match-braces rainbow-braces">set -e
+hash yadm 2&gt; /dev/null
 if [ $? -ne 0 ]; then
-    hash nix 2&gt; /den/null
+    hash nix 2&gt; /dev/null
     if [ $? -ne 0 ]; then sh &lt;(curl -fsSL https://nixos.org/nix/install) --daemon; fi
     nix-env -i yadm
 fi
@@ -120,9 +121,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-orgc90a0f6" class="outline-2">
-<h2 id="orgc90a0f6">makefile</h2>
-<div class="outline-text-2" id="text-orgc90a0f6">
+<div id="outline-container-orge4d77c2" class="outline-2">
+<h2 id="orge4d77c2">makefile</h2>
+<div class="outline-text-2" id="text-orge4d77c2">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -152,16 +153,17 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-12 Sat 15:21</p>
+<p class="date">Created: 2022-03-12 Sat 15:34</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
 </html>
 <!--
 EOF
+set -e
 hash yadm 2> /dev/null
 if [ $? -ne 0 ]; then
-    hash nix 2> /den/null
+    hash nix 2> /dev/null
     if [ $? -ne 0 ]; then sh <(curl -fsSL https://nixos.org/nix/install) --daemon; fi
     nix-env -i yadm
 fi
