--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-03-12 Sat 18:03 -->
+<!-- 2022-03-12 Sat 19:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,7 +55,7 @@
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a></li>
-<li><a href="#orgeb6d841">makefile</a></li>
+<li><a href="#orgaaacc88">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -74,7 +74,7 @@
 <h2 id="f3e32608-7200-4808-9d42-59112f32d395">index.html</h2>
 <div class="outline-text-2" id="text-f3e32608-7200-4808-9d42-59112f32d395">
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgeb5356a">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orga75be5b">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -99,14 +99,16 @@ This was adapted from <a href="https://ellipsis.sh/">ellipsis.sh</a>, raw file <
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-sh match-braces rainbow-braces">hash yadm 2&gt; /dev/null
+<pre><code class="language-sh match-braces rainbow-braces">fail () { set -eo pipefail; }
+
+hash yadm 2&gt; /dev/null
 if [ $? -ne 0 ]; then
     hash nix 2&gt; /dev/null
-    set -o pipefail
+    fail
     if [ $? -ne 0 ]; then sh &lt;(curl -fsSL https://nixos.org/nix/install) --daemon; fi
     nix-env -i yadm
 fi
-set -o pipefail
+fail
 yadm clone --no-bootstrap https://github.com/shadowrylander/shadowrylander.git || :
 GIT_SSL_NO_VERIFY=1 GIT_DISCOVERY_ACROSS_FILESYSTEM=1 yadm submodule update --init --depth 1 --recursive --remote --force
 yadm config include.path "$HOME/.gitconfig"
@@ -120,9 +122,9 @@ chmod +x "$HOME/.config/yadm/bootstrap"
 </div>
 </div>
 
-<div id="outline-container-orgeb6d841" class="outline-2">
-<h2 id="orgeb6d841">makefile</h2>
-<div class="outline-text-2" id="text-orgeb6d841">
+<div id="outline-container-orgaaacc88" class="outline-2">
+<h2 id="orgaaacc88">makefile</h2>
+<div class="outline-text-2" id="text-orgaaacc88">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -152,7 +154,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-03-12 Sat 18:03</p>
+<p class="date">Created: 2022-03-12 Sat 19:12</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
